# mcp-server-client

./: README.md  pyproject.toml
src/mcp_server_client/: __init__.py  mcp_client.py  mcp_server.py  requirements.txt
