[project]
name = "mcp-server-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anaskhan", email = "anaskhanx101@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mcp-server-client = "mcp_server_client:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
